created creds and env ymls

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,9 +4,14 @@ AllCops:
 
 require:
   - rubocop-rspec
+  - rubocop
+  - rubocop-performance
 
 RSpec/HookArgument:
   EnforcedStyle: each
 
+RSpec/InstanceVariable:
+ Enabled: false
+
 Metrics/LineLength:
-  Max: 120
+  Max: 200
