changes to files rubocop/shared context/spec helper

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,7 @@ require:
   - rubocop-performance
 
 RSpec/HookArgument:
-  EnforcedStyle: context
+  EnforcedStyle: implicit
 
 RSpec/ExampleLength:
   Enabled: false
