Created db test, changes in spec_helper,rubocop,gitignore

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,36 @@ RSpec/DescribeClass:
 RSpec/InstanceVariable:
  Enabled: false
 
+RSpec/LeakyConstantDeclaration:
+  Enabled: false
+
+RSpec/FilePath:
+  Enabled: false
+
+RSpec/MultipleMemoizedHelpers:
+  Max: 10
+
+RSpec/MultipleExpectations:
+  Enabled: false
+
+Style/MixinUsage:
+  Enabled: false
+
+Style/RescueStandardError:
+  Enabled: false
+
+Naming/RescuedExceptionsVariableName:
+  Enabled: false
+
+Naming/ConstantName:
+  Enabled: false
+
+Style/ColonMethodCall:
+  Enabled: false
+
+Style/HashSyntax:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 200
 
