--- a/config/test_data.yml
+++ b/config/test_data.yml
@@ -4,6 +4,7 @@ emails:
   administr_email: 'eringonzales@test.com'
   mod_email: 'petermoderator@test.com'
   owner_email: 'christianyoung@test.com'
+  owner_email_2: 'jasonbrown@test.com'
   waiter_email: 'alexandriawright@test.com'
   new_email: 
 pw:
@@ -21,9 +22,3 @@ test_rest:
   rest_phone: '+123456789'
   rest_preview_txt: 'This is a test preview text.'
   rest_description: 'This is a test description.'
-
-adminer_creds:
-  server: 'db'
-  username: 'admin'
-  password: '12345678'
-  database: 'easyrest'
