--- a/config/test_data.yml
+++ b/config/test_data.yml
@@ -6,7 +6,7 @@ emails:
   owner_email: 'christianyoung@test.com'
   owner_email_2: 'jasonbrown@test.com'
   waiter_email: 'alexandriawright@test.com'
-  new_email: 
+  new_email: 'alexandros@gmail.com'
 pw:
   customer_pwd: 1111
   admin_pwd: 1
@@ -14,7 +14,7 @@ pw:
   mod_pwd: 1
   owner_pwd: 1111
   waiter_pwd: 1
-  new_pwd: 
+  new_pwd: 'alex1234'
 
 test_rest:
   rest_name: 'Test reastaurant'
@@ -22,3 +22,22 @@ test_rest:
   rest_phone: '+123456789'
   rest_preview_txt: 'This is a test preview text.'
   rest_description: 'This is a test description.'
+
+test_guest:
+  guest_name: 'Alexandros'
+  guest_email: 'alexandros@gmail.com'
+  guest_phone: '0898753159'
+  guest_pw: 'alex1234'
+  guest_confirm_pw: 'alex1234'
+
+test_waiter:
+  waiter_name: 'Emanuil'
+  waiter_email: 'john@gmail.com'
+  waiter_pw: 'john12345'
+  witer_phone: '0898789963'
+
+test_administrator:
+  administrator_name: 'Peter'
+  administrator_email: 'peter@gmail.com'
+  administrator_pw: 'peter54321'
+  administrator_phone: '0898741321'
