Final, magic changes

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,7 @@ require:
   - rubocop-performance
 
 RSpec/HookArgument:
-  EnforcedStyle: implicit
+  Enabled: false
 
 RSpec/ExampleLength:
   Enabled: false
